--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -1,4 +1,6 @@
 .container {
+  overflow: hidden;
+  display: flex;
   height: 100vh;
   overflow: hidden;
 }
@@ -12,16 +14,33 @@ h4 {
 }
 
 .navigation {
-  flex: 0 1 395px;
+  /* flex: 0 1 395px; */
   box-shadow: 0px 0px 5px 0px gray;
+  position: fixed;
+  left: -390px;
+  width: 390px;
+  height: 100%;
+  background-color: rgba(129, 129, 129, 0.158);
+  transition: left 0.3s ease-in-out;
+}
+
+.navigation.active {
+  left: 0;
+}
+
+.navigation.active ~ .root {
+  margin-left: 390px;
 }
 
 .root {
   flex: 1;
+  width: 100%;
+  padding: 20px;
   margin: 28px 32px 0px 32px;
+  transition: margin-left 0.3s ease-in-out;
 }
 
-.menu{ 
+.menu {
   display: flex;
   flex-direction: row;
   padding: 10px 10px 0px 10px;
@@ -40,7 +59,7 @@ h4 {
   text-decoration: none;
 }
 
-.p10{
+.p10 {
   padding: 2px 10px;
 }
 
@@ -79,12 +98,12 @@ h4 {
     90deg,
     rgb(41 11 159) 0%,
     rgba(92, 30, 172, 1) 48%,
-    rgb(84 48 195) 48% 
+    rgb(84 48 195) 48%
   );
 }
 
 .contactBtn {
-  padding: 8px;  
+  padding: 8px;
   color: #000;
   display: flex;
   border-radius: 5px;
@@ -93,20 +112,160 @@ h4 {
   box-shadow: 0px 0px 2px 0px #00000030;
 }
 
-.menuTitle{
+.menuTitle {
   font-size: 20px;
   padding-left: 10px;
 }
 
-.statProject{ 
+.statProject {
   margin-bottom: 12px;
 }
 
-.totalProjects{ 
+.totalProjects {
   font-size: 35px;
   margin-right: 8px;
 }
 
-.subTitleProject{
+.subTitleProject {
   font-size: 12px;
+}
+
+.footer {
+  bottom: 0;
+  margin: auto;
+  padding: 8px;
+  position: absolute;
+}
+
+.tooltip {
+  position: relative;
+  display: inline-block;
+  border-bottom: 1px dotted black;
+}
+
+.tooltip .tooltiptext {
+  visibility: hidden;
+  width: 250px;
+  background-color: white;
+  color: black;
+  text-align: center;
+  border-radius: 6px;
+  margin: 12px 16px;
+  padding: 5px 15px;
+  position: absolute;
+  z-index: 1;
+  bottom: 13px;
+  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
+  border-radius: 5px;
+  display: flex;
+  flex-direction: row;
+}
+
+.description {
+  color: black;
+  margin-top: 14px;
+  font-weight: 600;
+  margin-left: 17px;
+  font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto,
+    Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
+
+.tooltip:hover .tooltiptext {
+  visibility: visible;
+}
+
+.tooltip .tooltiptext img {
+  width: 100px;
+  height: 100px;
+  object-fit: cover;
+  margin-top: 10px;
+  border-radius: 50%;
+  margin-bottom: 10px;
+}
+
+.tooltip .tooltiptext a {
+  display: inline-block;
+  margin: 0 5px;
+  color: #fff;
+}
+
+.tooltip .tooltiptext a:hover {
+  color: #ccc;
+}
+
+.image-container {
+  position: relative;
+  display: inline-block;
+}
+
+.image-container img {
+  display: block;
+  max-width: 100%;
+  height: auto;
+}
+
+.social-links {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  transform: translateX(-50%);
+  opacity: 0;
+  transition: opacity 0.3s ease-in-out;
+}
+
+.social-links a {
+  display: inline-block;
+  margin-right: 10px;
+  font-size: 24px;
+  color: #fff;
+  text-decoration: none;
+  transition: transform 0.3s ease-in-out;
+}
+
+.social-links a:hover {
+  transform: translateY(-5px);
+}
+
+.social-links a i {
+  display: block;
+  width: 40px;
+  height: 40px;
+  line-height: 40px;
+  text-align: center;
+  border-radius: 50%;
+  background-color: #333;
+}
+
+.image-container:hover .social-links {
+  opacity: 1;
+}
+
+.hamburger-menu {
+  width: 36px;
+  display: flex;
+  cursor: pointer;
+  cursor: pointer;
+  align-items: center;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.bar {
+  width: 30px;
+  height: 4px;
+  margin: 3px;
+  background-color: black;
+  transition: transform 0.3s ease-in-out;
+}
+
+.hamburger-menu.active .bar:nth-child(1) {
+  transform: translateY(10px) rotate(46deg);
+}
+
+.hamburger-menu.active .bar:nth-child(2) {
+  opacity: 0;
+}
+
+.hamburger-menu.active .bar:nth-child(3) {
+  transform: translateY(-10px) rotate(-43deg);
 }
