--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,38 +1,38 @@
-.containerProject{
-    display: flex;
-    padding-left: 8px;
-    flex-direction: column;
+.containerProject {
+  display: flex;
+  padding-left: 8px;
+  flex-direction: column;
 }
 
 a {
-    text-decoration: none;
+  text-decoration: none;
 }
 
-h3{
-    padding-left: 81px;
+h3 {
+  padding-left: 87px;
 }
 
-.title{
-    color: purple;
+.title {
+  color: purple;
 }
 
-.projectCard{ 
-    display: grid;
-    grid-row-gap: 2;
-    margin-top: 42px;
-    grid-column-gap: 2;
-    grid-template-columns: repeat(4, calc(25% - 0.5rem));
+.projectCard {
+  display: grid;
+  grid-row-gap: 2;
+  margin-top: 42px;
+  grid-column-gap: 2;
+  grid-template-columns: repeat(4, calc(25% - 0.5rem));
 }
 
-.card{
-    margin: auto;
-    width: 160px;
-    padding: 8px;
-    color: #000;
-    height: 170px;
-    display: flex;
-    border-radius: 10px;
-    align-items: flex-end;
-    justify-content: center;
-    box-shadow: 0px 0px 4px -2px rgb(26,37,41);
+.card {
+  margin: auto;
+  width: 160px;
+  padding: 8px;
+  color: #000;
+  height: 170px;
+  display: flex;
+  border-radius: 10px;
+  align-items: flex-end;
+  justify-content: center;
+  box-shadow: 0px 0px 4px -2px rgb(26, 37, 41);
 }
