--- a/src/components/Cv/Content/content.css
+++ b/src/components/Cv/Content/content.css
@@ -1,5 +1,20 @@
-.contentContainer{
-    color: #000;
-    padding-top: 25px;
-    padding-left: 81px;
+.contentContainer {
+  color: #000;
+  padding-top: 25px;
+  padding-left: 81px;
+}
+
+.slide-container {
+  width: 100%;
+  overflow-x: scroll;
+  white-space: nowrap;
+}
+
+.slide {
+  display: inline-block;
+  width: 100%;
+  height: 100vh;
+  padding: 50px;
+  background: aliceblue;
+  box-sizing: border-box;
 }
