--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -35,8 +35,9 @@ h4 {
 .root {
   flex: 1;
   width: 100%;
+  height: 94%;
   padding: 20px;
-  margin: 28px 32px 0px 32px;
+  margin: 28px 32px 16px 32px;
   transition: margin-left 0.3s ease-in-out;
 }
 
@@ -242,9 +243,11 @@ h4 {
 
 .hamburger-menu {
   width: 36px;
+  z-index: 500;
   display: flex;
   cursor: pointer;
   cursor: pointer;
+  position: relative;
   align-items: center;
   flex-direction: column;
   justify-content: center;
