--- a/src/components/Cv/Content/content.css
+++ b/src/components/Cv/Content/content.css
@@ -1,3 +1,79 @@
+.center-text {
+  text-align: center;
+}
+.footerc {
+  color: black;
+  text-align: center;
+  padding-bottom: 77px;
+}
+.rounded {
+  color: #000;
+  width: 250px;
+  padding: 54px;
+  border-radius: 6px;
+  background: aliceblue;
+}
+
+.parcour-container {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+}
+ol > li {
+  color: #000;
+}
+.experience-card-subtitle {
+  color: #000;
+  font-weight: 500;
+}
+p {
+  color: #000;
+  font-size: 20px;
+}
+.experience-card-title {
+  color: #000;
+  font-size: 25px;
+  font-weight: bold;
+}
+.experience-card {
+  padding: 25px;
+  margin: 25px 0px;
+  border: 1px solid black;
+}
+h3 {
+  color: black;
+  font-size: 38px;
+  letter-spacing: 8px;
+}
+.game-card {
+  background: #f37c7c;
+}
+.musique-card {
+  background: aliceblue;
+}
+.technologie-card {
+  background: #66635e;
+}
+.passion-item {
+  display: flex;
+  width: 380px;
+  color: #000;
+  height: 450px;
+  font-size: 18px;
+  font-weight: 400;
+  border-radius: 7px;
+  align-items: center;
+  justify-content: center;
+}
+.passion-content {
+  display: flex;
+  margin-top: 142px;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.content {
+  padding: 65px;
+}
 .contentContainer {
   color: #000;
   padding-top: 25px;
@@ -10,32 +86,21 @@
   white-space: nowrap;
 }
 
-.slide {
-  display: inline-block;
-  width: 100%;
-  padding: 17px;
-  background: aliceblue;
-  box-sizing: border-box;
-}
-
 #slideshow-container {
-  overflow-x: hidden;
   width: 100%;
-  height: 500px;
-  min-height: 86px;
-  position: relative;
+  height: 77%;
+  display: flex;
+  overflow: auto;
+  flex-direction: column;
 }
 
 .slide {
-  top: 0;
-  left: 0;
   height: auto;
   width: 100%;
   display: flex;
   color: black;
   font-size: 38px;
   align-items: center;
-  position: absolute;
   transition: transform 1s ease-in-out;
 }
 
