--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -4,6 +4,13 @@
   flex-direction: row;
 }
 
+.detailsTitlesContainer {
+  width: 100%;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+}
+
 .btnDetails {
   width: 100px;
   padding: 10px;
@@ -12,6 +19,17 @@
   border-radius: 15px;
   background-color: #fff;
   box-shadow: 0px 0px 4px -1px darkgrey;
+}
+
+.detailLogoContainer {
+  padding: 9px;
+  right: 327px;
+  position: absolute;
+  background: aliceblue;
+}
+
+.detailLogo {
+  width: 427px;
 }
 
 .btnCustom {
@@ -24,8 +42,8 @@
   box-shadow: 0px 0px 4px -1px darkgrey;
 }
 
-.btnCustom:hover{
-    cursor: pointer;
+.btnCustom:hover {
+  cursor: pointer;
 }
 
 .btnDetails:hover {
