--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -8,6 +8,11 @@
   flex-direction: column;
 }
 
+.logo {
+  width: 154px;
+  height: 154px;
+}
+
 a {
   text-decoration: none;
 }
@@ -36,7 +41,8 @@ h3 {
   height: 170px;
   display: flex;
   border-radius: 10px;
-  align-items: flex-end;
+  align-items: center;
+  flex-direction: column;
   justify-content: center;
   box-shadow: 0px 0px 4px -2px rgb(26, 37, 41);
 }
