--- a/src/components/Projects/style.css
+++ b/src/components/Projects/style.css
@@ -1,5 +1,6 @@
 .containerProjectTitle {
   padding-left: 69px;
+  color: #29293e !important;
 }
 .containerProject {
   display: flex;
@@ -15,6 +16,7 @@
 
 a {
   text-decoration: none;
+  color: #29293e !important;
 }
 
 h3 {
