--- a/src/components/Cv/Content/content.css
+++ b/src/components/Cv/Content/content.css
@@ -1,6 +1,22 @@
 .spotify-icon {
   width: 170px;
 }
+.qualityContainer {
+  display: flex;
+  color: black;
+  flex-direction: row;
+  justify-content: space-around;
+}
+.qualitySubTitle {
+  text-align: center;
+  width: 100%;
+  display: block;
+}
+li {
+  margin: 52px;
+  height: 30px;
+  color: black;
+}
 .calque {
   background: red;
   width: 100%;
