--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -37,12 +37,15 @@ h4 {
   width: 100%;
   height: 94%;
   padding: 20px;
+  position: relative;
+  z-index: 5 !important;
   margin: 28px 32px 16px 32px;
   transition: margin-left 0.3s ease-in-out;
 }
 
 .menu {
   display: flex;
+  margin-top: 30px;
   flex-direction: row;
   padding: 10px 10px 0px 10px;
 }
@@ -131,10 +134,12 @@ h4 {
   font-size: 12px;
 }
 
-.footer {
-  bottom: 0;
+.header-title {
+  top: 0;
+  width: 100%;
   margin: auto;
   padding: 8px;
+  text-align: left;
   position: absolute;
 }
 
@@ -146,7 +151,7 @@ h4 {
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 250px;
+  width: 450px;
   background-color: white;
   color: black;
   text-align: center;
@@ -154,8 +159,8 @@ h4 {
   margin: 12px 16px;
   padding: 5px 15px;
   position: absolute;
-  z-index: 1;
-  bottom: 13px;
+  z-index: 800 !important;
+  /* bottom: 13px; */
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   display: flex;
@@ -180,7 +185,7 @@ h4 {
   height: 100px;
   object-fit: cover;
   margin-top: 10px;
-  border-radius: 50%;
+  /* border-radius: 50%; */
   margin-bottom: 10px;
 }
 
@@ -242,19 +247,22 @@ h4 {
 }
 
 .hamburger-menu {
+  top:0;
+  left:0;
   width: 36px;
-  z-index: 500;
+  height: 20px;
   display: flex;
   cursor: pointer;
   cursor: pointer;
-  position: relative;
+  position: absolute;
   align-items: center;
+  z-index: 2 !important;
   flex-direction: column;
   justify-content: center;
 }
 
 .bar {
-  width: 30px;
+  width: 20px;
   height: 4px;
   margin: 3px;
   background-color: black;
@@ -270,5 +278,5 @@ h4 {
 }
 
 .hamburger-menu.active .bar:nth-child(3) {
-  transform: translateY(-10px) rotate(-43deg);
+  transform: translateY(-3px) rotate(-43deg);
 }
