--- a/src/components/Cv/Header/header.css
+++ b/src/components/Cv/Header/header.css
@@ -12,7 +12,7 @@
 .CvContent {
   flex: 1;
   display: flex;
-  padding-left: 32px;
+  /* padding-left: 32px; */
   flex-direction: column;
   justify-content: space-between;
 }
@@ -24,7 +24,8 @@
 }
 
 .CvContent > div > p {
-  width: 45%;
+  width: 90%;
+  margin-top: 2px;
   color: #000;
   font-weight: 300;
   margin-right: 42px;
