--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -7,6 +7,7 @@
 .detailsTitlesContainer {
   width: 100%;
   display: flex;
+  position: relative;
   flex-direction: row;
   justify-content: space-between;
 }
@@ -22,11 +23,14 @@
 }
 
 .detailLogoContainerx {
+  top: 0;
+  right: 0;
+  position: absolute;
   background: aliceblue;
 }
 
 .detailLogo {
-  width: 427px;
+  width: 227px;
 }
 
 .btnCustom {
@@ -106,8 +110,8 @@ u:hover {
 
 .detailLogoContainer {
   padding: 9px;
-  right: 327px;
-  position: fixed;
+  /* right: 327px;
+  position: fixed; */
   background: aliceblue;
 }
 
