--- a/src/components/Cv/Content/content.css
+++ b/src/components/Cv/Content/content.css
@@ -93,22 +93,31 @@
 }
 .rounded {
   color: #000;
-  width: 250px;
-  padding: 28px;
+  margin-left: 5px;
+  padding: 7px 14px;
   border-radius: 6px;
   background: aliceblue;
 }
 
+.italic{
+  font-style: italic;
+}
+
+.degrees{
+  font-weight: bold;
+}
+
 .parcour-container {
+  width: 100%;
   display: flex;
-  flex-direction: row;
+  flex-direction: row-reverse;
   justify-content: space-around;
 }
 ol > li {
   color: #000;
 }
 .experience-card-subtitle {
-  color: #000;
+  color: #29293E;
   font-weight: 500;
 }
 p {
@@ -116,8 +125,8 @@ p {
   font-size: 20px;
 }
 .experience-card-title {
-  color: #000;
-  font-size: 25px;
+  color: #29293E;
+  font-size: 23px;
   font-weight: bold;
 }
 .experience-card {
@@ -127,7 +136,7 @@ p {
 }
 h3 {
   color: black;
-  font-size: 23px;
+  font-size: 20px;
   letter-spacing: 8px;
 }
 .game-card {
@@ -158,14 +167,15 @@ h3 {
 }
 .technos-content {
   display: flex;
+  margin-top: 5px;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
 }
 .content-passion {
   padding-bottom: 154px !important;
 }
 .content {
-  padding: 0px 65px 0px;
+  padding: 0px 25px 0px;
 }
 .contentContainer {
   color: #000;
@@ -247,4 +257,9 @@ h3 {
 
 .slide-indicator.active {
   background-color: grey;
+}
+
+.project-description{
+  font-size: 16px;
+  text-align: justify;
 }
