--- a/src/components/Cv/Header/header.css
+++ b/src/components/Cv/Header/header.css
@@ -1,16 +1,24 @@
 .CvHeaderContainer {
+  width: 100%;
   display: flex;
-  padding-left: 81px;
+  margin-top: 12px;
+  margin-left: 25px;
   flex-direction: row;
   padding-bottom: 10px;
 }
 
+.bigCvContainer{
+  display: flex;
+  flex-direction: column;
+}
+
 .photoCv {
-  flex: 0 1 160px;
+  flex: 0 1 117px;
 }
 
 .CvContent {
   flex: 1;
+  width: 100%;
   display: flex;
   /* padding-left: 32px; */
   flex-direction: column;
@@ -24,15 +32,16 @@
 }
 
 .CvContent > div > p {
-  width: 90%;
+  width: 95%;
   margin-top: 2px;
   color: #000;
   font-weight: 300;
-  margin-right: 42px;
   text-align: justify;
+  /* margin-right: 42px; */
 }
 
 .cvMenu {
+  margin: auto;
   color: #000;
   display: flex;
   flex-direction: row;
