--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -35,13 +35,19 @@
 }
 
 .btnCustom {
-  padding: 10px;
+  padding: 5px;
+  width: 100px;
+  font-size: 12px;
   font-weight: 600;
   margin-right: 12px;
   text-align: center;
-  border-radius: 15px;
+  border-radius: 5px;
   background-color: #fff;
   box-shadow: 0px 0px 4px -1px darkgrey;
+}
+
+.btnCertifications{
+  width: 220px;
 }
 
 .btnCustom:hover {
