--- a/src/common/cards/technoCard/style.css
+++ b/src/common/cards/technoCard/style.css
@@ -1,7 +1,12 @@
 .cardTechno{
+    display: flex;
     padding: 12px; 
-    min-width: 70px;
     min-height: 70px;
     border-radius: 15px;
+    margin-bottom: 15px ;
     box-shadow: 0px 0px 4px -2px black;
+}
+
+.image-title{
+    position: absolute;
 }
