--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -9,17 +9,21 @@
   display: flex;
   position: relative;
   flex-direction: row;
+  /* background: #006bd5; */
   justify-content: space-between;
 }
 
 .btnDetails {
-  width: 120px;
-  padding: 4px;
-  margin-right: 12px;
+  /* width: 120px; */
+  padding: 2px;
+  padding-left: 7px;
+  padding-right: 7px;
+  margin-right: 5px;
   text-align: center;
-  border-radius: 15px;
+  border-radius: 5px;
+  padding-bottom: 4px;
   background-color: #fff;
-  box-shadow: 0px 0px 4px -1px darkgrey;
+  box-shadow: 2px 1px 1px 0px darkgrey;
 }
 
 .detailLogoContainerx {
@@ -83,20 +87,23 @@ u:hover {
 }
 
 .technoGrid {
-  display: grid;
-  margin-left: 1px;
+  display: flex;
+  margin-left: 9px;
+  justify-content: start;
+  /* display: grid;
   grid-row-gap: 2px;
   grid-column-gap: 35px;
-  grid-template-columns: repeat(8, calc(8% - 0.5rem));
+  grid-template-columns: repeat(8, calc(8% - 0.5rem)); */
 }
 
 .functionnalityCard {
-  margin: 8px;
   width: 140px;
   padding: 7px;
   display: flex;
   color: #fff;
-  border-radius: 15px;
+  cursor: default;
+  margin-right: 8px;
+  border-radius: 5px;
   justify-content: center;
   box-shadow: 0px 0px 4px -2px black;
 }
