improve screenshoot component

--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -126,10 +126,11 @@ u:hover {
 }
 
 .screenShootWeb{
-  width: 700px;
   padding: 15px;
   display: flex;
-  flex-direction: column;
+  flex-wrap: wrap;
+  flex-direction: row;
+  justify-content: space-between;
 }
 
 .greenBg {
