--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -22,7 +22,7 @@ h4 {
 
 .navigation {
   /* flex: 0 1 395px; */
-  z-index: 20;
+  z-index: 5;
   left: -390px;
   width: 320px;
   height: 100%;
@@ -159,7 +159,7 @@ h4 {
 
 .tooltip .tooltiptext {
   visibility: hidden;
-  width: 450px;
+  width: 220px;
   background-color: white;
   color: black;
   text-align: center;
@@ -172,7 +172,7 @@ h4 {
   box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
   border-radius: 5px;
   display: flex;
-  flex-direction: row;
+  flex-direction: column;
 }
 
 .description {
@@ -188,12 +188,26 @@ h4 {
   visibility: visible;
 }
 
+.separator{
+  top:0;
+  left: 0;
+  z-index: 1;
+  width: 100%;
+  height: 131px;
+  position: absolute;
+  border-top-left-radius: 6px;   
+  border-top-right-radius: 6px;
+  background: linear-gradient(135deg, #11cbbc 28%, #5195dd 100%);
+}
+
 .tooltip .tooltiptext img {
+  z-index: 5;
   width: 100px;
+  margin: auto;
   height: 100px;
   object-fit: cover;
   margin-top: 10px;
-  /* border-radius: 50%; */
+  border-radius: 50%;
   margin-bottom: 10px;
 }
 
