--- a/src/components/Projects/ProjectDetail/styles.css
+++ b/src/components/Projects/ProjectDetail/styles.css
@@ -96,6 +96,7 @@ u:hover {
 .technoGrid {
   display: flex;
   margin-left: 9px;
+  margin-bottom: 21px;
   justify-content: flex-start;
   /* display: grid;
   grid-row-gap: 2px;
