--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -62,6 +62,9 @@ h4 {
 }
 
 @media(max-width: 360px){
+  .screenShootWeb{
+    justify-content: center;
+  }
   .passion-content{
     flex-wrap: wrap;
     justify-content: start;
@@ -122,7 +125,23 @@ h4 {
   }
 }
 
+@media (max-width: 450px) {
+  .projectTitle{
+    font-size: 16px;
+  }
+  .passion-content{
+    align-items: center;
+    flex-direction: column;
+  }
+  .passion-content > * {
+    margin-bottom: 10px;
+  }
+}
+
 @media (max-width: 430px) and (min-width: 361px) {
+  .screenShootWeb{
+    justify-content: center;
+  }
   .passion-content{
     flex-wrap: wrap;
     justify-content: start;
@@ -167,6 +186,7 @@ h4 {
     margin-bottom: 17px;
   }
   ul > li{
+    width: 119%;
     line-height: 1.4;
     text-align: justify;
     margin-bottom: 17px;
@@ -184,6 +204,9 @@ h4 {
 }
 
 @media (max-width: 600px) and (min-width: 430px){
+  .screenShootWeb{
+    justify-content: center;
+  }
   .parcour-container{
     flex-wrap: wrap-reverse;
   }
