add stripe chip

--- a/src/components/TechnosChip/TechnosChip.css
+++ b/src/components/TechnosChip/TechnosChip.css
@@ -27,6 +27,13 @@
   position: relative;
 }
 
+.stripe-logo {
+  top: -8px;
+  left: 11px;
+  height: 38px;
+  position: relative;
+}
+
 .sqlite-logo {
   left: 5px;
   top: -13px;
