--- a/src/common/layout/style.css
+++ b/src/common/layout/style.css
@@ -125,7 +125,16 @@ h4 {
   }
 }
 
+.local-btn-mobile{
+  margin-top: 7px;
+  margin-left: 7px;
+  visibility: hidden;
+}
+
 @media (max-width: 450px) {
+  .local-btn-mobile{
+    visibility: visible;
+  }
   .projectTitle{
     font-size: 16px;
   }
